[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: Apache Airflow",
]

[project.urls]
Homepage = "https://github.com/armandospxp/airflow-provider-ibm-db2"
Repository = "https://github.com/armandospxp/airflow-provider-ibm-db2"
Issues = "https://github.com/armandospxp/airflow-provider-ibm-db2/issues"
name = "airflow-provider-ibm-db2"
version = "0.1.0"
description = "Apache Airflow provider for IBM Db2 (Hook + Operators)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Armando Rodriguez", email="armandospxp@gmail.com" },
]
license = { text = "MIT" }
dependencies = [
  "apache-airflow>=2.7",
]
optional-dependencies.dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "types-PyYAML",
]

[project.entry-points."apache_airflow_provider"]
provider_info = "airflow_provider_ibm_db2:get_provider_info"

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]

[tool.hatch.version]
path = "src/airflow_provider_ibm_db2/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/airflow_provider_ibm_db2"]
